Sun Feb  9 01:48:01 1997  Tom Yu  <tlyu@mit.edu>

	* Makefile.in:
	* configure.in: Update to new program build procedure.

Mon Mar 18 21:49:39 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* configure.in: Add KRB5_RUN_FLAGS

	* Makefile.in: Use runtime flags.

Wed Sep 13 13:57:40 1995  Theodore Y. Ts'o  <tytso@dcl>

	* resolve.c (main): Fix fencepost error; use argv[1] to test for a
		specfied host if argc is >= 1, not just > 1.

Wed Jul 12 12:32:14 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Add LD_LIBRARY_PATH in case we were linked with shared
		libraries by default.
	* configure.in - Remove V5_USE_SHARED_LIB.


Fri Jul 7 16:38:47 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Remove LDFLAGS and use DEPLIBS.
	* configure.in - Add KRB5_LIBRARIES and V5_USE_SHARED_LIB

Fri Jun  9 18:58:43 1995    <tytso@rsx-11.mit.edu>

	* configure.in: Remove standardized set of autoconf macros, which
		are now handled by CONFIG_RULES.

Mon May  1 20:00:18 1995  Theodore Y. Ts'o  (tytso@dcl)

	* resolve.c (main): Add --quiet option which only prints the fully
		qualified domain name.  This will allow this routine to be
		used in the deja gnu tests to determine the FQDN of the
		local host.

Tue Apr 25 22:16:38 1995  Mark Eichin  <eichin@cygnus.com>

	* resolve.c (main): copy the address sent back by gethostbyname
	before calling gethostbyaddr, since the return is *static*.
	(main): reindent declaration to make add-change-log-entry happy.
