@@ -1,3 +1,11 @@
+Sat Feb 22 20:28:32 1997  Theodore Ts'o  <tytso@rsts-11.mit.edu>
+
+	* resolve.c (main): Make the test for a FQDN be a bit more
+		stringent.
+
+	* Makefile.in (resolve): The resolve program doesn't need to be
+		linked against the Kerberos library.
+
 Sun Feb  9 01:48:01 1997  Tom Yu  <tlyu@mit.edu>
 
 	* Makefile.in:
